--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="account.html"><i class="fas fa-user"></i> Account</a></li> <!-- Added account icon -->
             </ul>
         </nav>
     </header>
