--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
             </ul>
         </nav>
     </header>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
     <main>
         <!-- Welcome Section -->
         <section class="hero">
@@ -89,7 +99,15 @@
         <!-- About Section -->
         <section class="about">
             <h2>About Hot Peck</h2>
-            <p>At Hot Peck, we bring the heat to your plate. Our mission is to serve bold flavors and unforgettable meals. From our signature spicy chicken to our loaded fries, every bite is crafted with passion and quality.</p>
+            <img src="images/about-hot-peck.jpg" alt="About Hot Peck">
+            <p>
+                At Hot Peck, we bring the heat to your plate. Our mission is to serve bold flavors and unforgettable meals. 
+                From our signature spicy chicken to our loaded fries, every bite is crafted with passion and quality.
+            </p>
+            <p>
+                Whether you're dining in or ordering online, we strive to deliver an exceptional experience. 
+                Join us and discover why Hot Peck is the ultimate destination for spice lovers!
+            </p>
         </section>
 
         <!-- Gallery Section -->
