--- a/signup.html
+++ b/signup.html
@@ -10,13 +10,18 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="Hot Peck Logo">
+                <img src="images/1Asset 3.png" alt="Hot Peck Logo">
             </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="account.html"><i class="fas fa-user"></i> Account</a></li> <!-- Added account icon -->
+            <div class="burger-menu">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="menu.html"><i class="fas fa-utensils"></i> Menu</a></li>
+                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+                <li><a href="account.html"><i class="fas fa-user"></i> Account</a></li>
             </ul>
         </nav>
     </header>
